# NyxCLang

./: .gitignore  CMakeLists.txt  README.md
BasicSamples/: CMakeLists.txt
BasicSamples/advanced/smart_pointer/: 01_smart_pointer_shared_ptr.cpp  02_smart_pointer_shared_ptr_deleter.cpp
BasicSamples/basic/array/: hello_array.cpp
BasicSamples/basic/data-structure/: 01_demo_map.cpp
BasicSamples/basic/data-type/: 02_demo_delete.cpp  demo_size_of.cpp
BasicSamples/basic/file/: 01_demo_file.cpp
BasicSamples/basic/function/: 01_demo_function_pointer.cpp
BasicSamples/basic/name-space/: 01_demo_name_space.cpp
BasicSamples/basic/object-oriented/: 01_demo_object_oriented.cpp
BasicSamples/basic/pointer/: 01_demo_pointer-of-function.cpp  02_demo_pointer_nullpt.cpp
BasicSamples/stdio/: 01_demo_getenv.cpp
VisionAbilityLearn/: .gitignore
VisionAbilityLearn/vision/: CMakeLists.txt
VisionAbilityLearn/vision/tools/model_packer/: CMakeLists.txt  main.cpp  merge_tool.cpp  merge_tool.h
VisionLearn/: CMakeLists.txt
VisionLearn/vision/tools/: CMakeLists.txt
VisionServiceLearn/: CMakeLists.txt  README.md  VisionServiceConfig.h.in  build.sh  main.cpp
VisionServiceLearn/vision-app/: CMakeLists.txt
VisionServiceLearn/vision-app/src/: vision_app.cpp
VisionServiceLearn/vision-app/src/handler/: looper.cpp  looper.h  message.cpp  message.h
VisionServiceLearn/vision-app/src/utils/: help_utils.cpp  help_utils.h  log_utils.cpp  log_utils.h  vision.h
VisionServiceLearn/vision-service/: CMakeLists.txt
VisionServiceLearn/vision-service/src/test/: CMakeLists.txt
basic/file/: 01_demo_file.cpp
basic/other/: 01_demo_explicit.cpp
basic/pointer/: 01_demo_pointer.cpp  03_demo_pointer_operator.cpp
object-oriented/: 01_demo_object_oriented.cpp  15_function_obj_transform.cpp
pointer/: 01_demo_pointer.cpp  02_demo_pointer_nullpt.cpp  03_demo_pointer.cpp  04_demo_pointer_array.cpp  05_demo_pointer_new_delete.cpp
pointer-of-function/: 01_demo_pointer-of-function.cpp
